# opencv-camera-detector

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: build.yaml
python/opencv_camera_detector/: __init__.py  _opencv_camera_detector.pyi
python/opencvutil/: __init__.py
src/: lib.rs
tests/: test_main.py
